examples/good/16-02-break-continue.elina
fn main(): void {
  var x: int = 0;
  while (x < 10) {
    x++;
    if (x % 2 == 0) {
      continue;
    }
    printInt(x);
  }
}