examples/bad/declare-wrong-type-global.elina
var x: bool = 6 + 10;

fn main(): void {
}